# comp_funcional

./: jogoDaVelha.hs  jogoDaVelha.hs.save
Aulas/Aulas/aulanoite/: CHANGELOG.md  README.md  aulanoite.cabal
Aulas/Aulas/aulanoite/.stack-work/: stack.sqlite3
Aulas/Aulas/aulanoite/src/: Main.hs
Aulas/Aulas/playgroud/: CHANGELOG.md  playgroud.cabal
Aulas/Aulas/playgroud/.stack-work/: stack.sqlite3
Aulas/Aulas/playgroud/src/: Main.hs
Aulas/Aulas/proj-exemplo/: CHANGELOG.md  README.md  proj-exemplo.cabal
Aulas/Aulas/proj-exemplo/.stack-work/: stack.sqlite3
Aulas/Aulas/proj-exemplo/src/: Main.hs
Projeto1/DetectIdiom/: DetectIdiom.cabal
Projeto1/DetectIdiom/.stack-work/: stack.sqlite3
Projeto1/DetectIdiom/TextosInput/: teste.txt
Projeto1/DetectIdiom/dist-newstyle/cache/: elaborated-plan  improved-plan
Projeto1/DetectIdiom/src/: Main.hs
lista-dois/: CHANGELOG.md  README.md  lista-dois.cabal
lista-dois/.stack-work/: stack.sqlite3
lista-dois/src/: Main.hs
lista3-treino/: CHANGELOG.md  README.md  lista3-treino.cabal
lista3-treino/.stack-work/: stack.sqlite3
lista3-treino/src/: Main.hs
lista4/: CHANGELOG.md  README.md
lista4/.stack-work/: stack.sqlite3
lista4/lista4/: lista4.cabal
lista4/lista4/.stack-work/: stack.sqlite3
lista4/lista4/src/: Main.hs
lista4/src/: Main.hs
lista5/: CHANGELOG.md  README.md  lista5.cabal
lista5/.stack-work/: stack.sqlite3
lista5/src/: Main.hs
playground/: playground.cabal
playground/.stack-work/: stack.sqlite3
playground/src/: Main.hs
projeto1/DetectIdiom/: CHANGELOG.md  DetectIdiom.cabal  README.md
projeto1/DetectIdiom/.stack-work/: stack.sqlite3
projeto1/DetectIdiom/.stack-work/ghci/4b78fe98/: cabal_macros.h
projeto1/DetectIdiom/TextosInput/: comparado.txt  comparado2.txt  teste.txt
projeto1/DetectIdiom/dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
projeto1/DetectIdiom/src/: Main.hs
projeto2/: CHANGELOG.md  libs_instaladas.txt  projeto2.cabal
projeto2/.stack-work/: stack.sqlite3
projeto2/.stack-work/ghci/1533511d/: cabal_macros.h
projeto2/.stack-work/ghci/30730314/: cabal_macros.h
projeto2/.stack-work/ghci/88d81c05/: cabal_macros.h
projeto2/.stack-work/ghci/8a34739f/: cabal_macros.h
projeto2/.stack-work/ghci/bd55df3d/: cabal_macros.h
projeto2/.stack-work/ghci/c80cbf4f/: cabal_macros.h
projeto2/TextosInput/: app_saved_text.txt  teste1.txt  tester1.txt
projeto2/src/: Idiom.hs  Idiom2.hs  Main.hs
(+15 files in other folders)
